modify library api
